--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,13 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  get: ^3.26.0
-  google_fonts: ^1.1.2
+  get: ^4.1.3
+  google_fonts: ^2.0.0
+  firebase_core: ^1.0.3
+  firebase_auth: ^1.0.2
+  fluttertoast: ^8.0.3
   dotted_border: ^1.0.7
-  circular_countdown_timer: ^0.1.0
+  circular_countdown_timer: ^0.2.0
   flutter:
     sdk: flutter
 
@@ -36,6 +39,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  google_fonts: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
