--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,12 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  get: ^4.1.3
+  get: ^4.1.4
   google_fonts: ^2.0.0
-  firebase_core: ^1.0.3
-  firebase_auth: ^1.0.2
-  fluttertoast: ^8.0.3
-  dotted_border: ^1.0.7
-  circular_countdown_timer: ^0.2.0
+  firebase_core: ^1.0.4
+  firebase_auth: ^1.1.1
+  cloud_firestore: ^1.0.6
+
   flutter:
     sdk: flutter
 
