--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_core: ^1.0.4
   firebase_auth: ^1.1.1
   cloud_firestore: ^1.0.6
+  fluttertoast: ^8.0.5
+
 
   flutter:
     sdk: flutter
