--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_auth: ^1.1.1
   cloud_firestore: ^1.0.6
   fluttertoast: ^8.0.5
+  firebase_auth_web: ^1.1.1
 
 
   flutter:
