--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   cloud_firestore: ^1.0.6
   fluttertoast: ^8.0.5
   firebase_auth_web: ^1.1.1
-
+  logger: ^1.0.0
 
   flutter:
     sdk: flutter
